# imagenex831l

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  rustfmt.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/assets/: 831L.psd
.github/workflows/: ci-rust.yaml  ci-sh.yaml  ci.yaml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: completion.rs
sample/: 27JUL2023-101914.31l
scripts/: calculate-range-bins.sh  calculate-range-tables.sh
src/: array.rs  build.rs  error.rs  file.rs  io.rs  lib.rs  logger.rs  shot.rs  sonar_return.rs  switch_data.rs
src/types/: acceleration.rs  angle.rs  command.rs  config.rs  data.rs  data_bits.rs  data_length.rs  data_size_index.rs  direction.rs  file_header.rs  head_position.rs  logf.rs  mod.rs  mode.rs  motion_config.rs  motor_calibrate.rs  profile_grid.rs  profile_point_detection.rs  range_code.rs  range_index.rs  range_table.rs  reverse.rs  sensor_available.rs  sensor_information.rs  sonar_return_header.rs  sonar_return_magic.rs  sonar_return_status.rs  sonar_type.rs  step_direction.rs  step_size.rs  transducer.rs  zero.rs
src/types/primitive/: absorption.rs  datetime.rs  frequency.rs  i14f2.rs  mod.rs  profile_min_range.rs  profile_range.rs  pulse_length.rs  real_time_prf.rs  sector_size.rs  sound_velocity.rs  start_gain.rs  string.rs  train_angle.rs  u14.rs
src/types/util/: primitive.rs
