[project]
name = "imagenex831l"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[build-system]
build-backend = "maturin"
requires = ["maturin>=1,<2"]
