[package]
name = "cli"
version = { workspace = true }
keywords = { workspace = true }

[[bin]]
name = "i831"
path = "src/main.rs"

[features]
csv-output = []

[dependencies]
human-panic = "2.0.1"
better-panic = "0.3.0"
clap = { version = "4.5.45", features = ["derive"] }
clap_complete = "4.5.54"

[dependencies.imagenex831l]
path = "../"
